--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   camera: ^0.11.1
   flutter_foreground_task: ^9.1.0
   google_mlkit_face_detection: ^0.13.1
+  cloud_firestore: ^5.6.7
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
