--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fl_chart: ^0.71.0
   google_fonts: ^6.2.1
   audioplayers: ^6.4.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
