--- a/App/.env
+++ b/App/.env
@@ -1,2 +1,2 @@
-API_KEY='AIzaSyAHiIqcNLWWefj9eUky-oNQTkbRoJJMODA'
-API_MODEL='gemini-2.0-flash
+API_KEY="AIzaSyAHiIqcNLWWefj9eUky-oNQTkbRoJJMODA"
+API_MODEL="gemini-2.0-flash"
