--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   audioplayers: ^6.4.0
   flutter_dotenv: ^5.2.1
   flutter_custom_clippers: ^2.1.0
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
