--- a/App/android/gradle.properties
+++ b/App/android/gradle.properties
@@ -1,3 +1,6 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.scan=true
+org.gradle.enterprise.build-scan.terms-of-service.url=https://gradle.com/terms-of-service
+org.gradle.enterprise.build-scan.terms-of-service.agree=yes
